crates/syntax/src/snapshots/syntax__grammar__tests__field_let.snap
---
source: crates/syntax/src/grammar.rs
expression: "parse(\"class Foo { let\")"
---
Parse {
    root_node: Root@0..15
      StatementList@0..15
        Class@0..15
          ClassKw@0..5 "class"
          Whitespace@5..6 " "
          Identifier@6..10
            Id@6..9 "Foo"
            Whitespace@9..10 " "
          RecordBody@10..15
            ParentClassList@10..10
            Body@10..15
              LBrace@10..11 "{"
              Whitespace@11..12 " "
              FieldLet@12..15
                LetKw@12..15 "let"
                Identifier@15..15
                Value@15..15
                  InnerValue@15..15
    ,
    errors: [
        SyntaxError {
            range: 15..15,
            message: "expected field identifier after let",
        },
        SyntaxError {
            range: 15..15,
            message: "unknown token when parsing a value",
        },
    ],
}
