crates/syntax/src/snapshots/syntax__grammar__tests__foreach-3.snap
---
source: crates/syntax/src/grammar.rs
expression: "parse(\"foreach i = 0 ... 1 in {}\")"
---
(
    SourceFile@0..25
      StatementList@0..25
        Foreach@0..25
          ForeachKw@0..7 "foreach"
          Whitespace@7..8 " "
          ForeachIterator@8..20
            Identifier@8..10
              Id@8..9 "i"
              Whitespace@9..10 " "
            Equal@10..11 "="
            Whitespace@11..12 " "
            RangePiece@12..20
              Value@12..14
                InnerValue@12..14
                  Integer@12..14
                    IntVal@12..13 "0"
                    Whitespace@13..14 " "
              DotDotDot@14..17 "..."
              Whitespace@17..18 " "
              Value@18..20
                InnerValue@18..20
                  Integer@18..20
                    IntVal@18..19 "1"
                    Whitespace@19..20 " "
          In@20..22 "in"
          Whitespace@22..23 " "
          StatementList@23..25
            LBrace@23..24 "{"
            RBrace@24..25 "}"
    ,
    [],
)
