crates/syntax/src/snapshots/syntax__grammar__tests__inner_value.snap
---
source: crates/syntax/src/grammar.rs
expression: "parse(\"class Foo<int A = Hoge.Fuga, bits<2> B = Hoge{0...1}, list<int> C = Hoge[0...1]>;\")"
---
Parse {
    root_node: SourceFile@0..81
      StatementList@0..81
        Class@0..81
          ClassKw@0..5 "class"
          Whitespace@5..6 " "
          Identifier@6..9
            Id@6..9 "Foo"
          TemplateArgList@9..80
            Less@9..10 "<"
            TemplateArgDecl@10..27
              IntType@10..14
                Int@10..13 "int"
                Whitespace@13..14 " "
              Identifier@14..16
                Id@14..15 "A"
                Whitespace@15..16 " "
              Equal@16..17 "="
              Whitespace@17..18 " "
              Value@18..27
                InnerValue@18..27
                  Identifier@18..22
                    Id@18..22 "Hoge"
                  FieldSuffix@22..27
                    Dot@22..23 "."
                    Identifier@23..27
                      Id@23..27 "Fuga"
            Comma@27..28 ","
            Whitespace@28..29 " "
            TemplateArgDecl@29..52
              BitsType@29..37
                BitsKw@29..33 "bits"
                Less@33..34 "<"
                Integer@34..35
                  IntVal@34..35 "2"
                Greater@35..36 ">"
                Whitespace@36..37 " "
              Identifier@37..39
                Id@37..38 "B"
                Whitespace@38..39 " "
              Equal@39..40 "="
              Whitespace@40..41 " "
              Value@41..52
                InnerValue@41..52
                  Identifier@41..45
                    Id@41..45 "Hoge"
                  RangeSuffix@45..52
                    LBrace@45..46 "{"
                    RangeList@46..51
                      RangePiece@46..51
                        Integer@46..47
                          IntVal@46..47 "0"
                        DotDotDot@47..50 "..."
                        Integer@50..51
                          IntVal@50..51 "1"
                    RBrace@51..52 "}"
            Comma@52..53 ","
            Whitespace@53..54 " "
            TemplateArgDecl@54..79
              ListType@54..64
                ListKw@54..58 "list"
                Less@58..59 "<"
                IntType@59..62
                  Int@59..62 "int"
                Greater@62..63 ">"
                Whitespace@63..64 " "
              Identifier@64..66
                Id@64..65 "C"
                Whitespace@65..66 " "
              Equal@66..67 "="
              Whitespace@67..68 " "
              Value@68..79
                InnerValue@68..79
                  Identifier@68..72
                    Id@68..72 "Hoge"
                  SliceSuffix@72..79
                    LSquare@72..73 "["
                    SliceElements@73..78
                      SliceElement@73..78
                        Value@73..74
                          InnerValue@73..74
                            Integer@73..74
                              IntVal@73..74 "0"
                        DotDotDot@74..77 "..."
                        Value@77..78
                          InnerValue@77..78
                            Integer@77..78
                              IntVal@77..78 "1"
                    RSquare@78..79 "]"
            Greater@79..80 ">"
          RecordBody@80..81
            ParentClassList@80..80
            Body@80..81
              Semi@80..81 ";"
    ,
    errors: [],
}
